BACKEND: CHAT: DB: Updated GET etc.
